Sys::Virt ChangeLog
===================

Since 0.2.0:

 - Add all new APIs upto libvirt 0.6.4 (network interfaces,
   storage volume cloning and node device create/delete)
 - Fix off-by-1 in UUID stringification
 - Set default values for optional params.
 - Use SvOK check for potentially undefined string params
 - Export all the virError related constants
 - Fix some memory leaks in C layer
 - Remove bogus module imports from test suite

Since 0.1.2:

 - Implement storage, node device, event APIs
 - Full covereage of all APIs in 0.6.1 release of libvirt
 - Full documentation coverage
 - Ability to authenticate when openning connections

Since 0.1.1:

 - Added manual written META.yml
 - Added networking APIs
 - Added APIs for host capabilities
 - Added APIs for inactive domains
 - Switch licensse to GPLv2+ or Artistic for CPAN compatability
 - Fix return values for reboot/shutdown/undefine/create APIs
 - Expanded documentation coverage

Since 0.1.0:

 - Fixed POD documentation names
 - Make Sys::Virt::Error use 'strict' and 'warnings' pragmas
 - Remove duplicated DESTROY sub in Domain.pm since its already
   provided in the XS backend
 - Fixed typo in Makefile.PL
 - Allow connection URI to be passed to example programs
 - Minimum required libvirt version is now 0.1.1
 - Make Makefile.PL exit if minimum required libvirt is not
   found by pkg-config
 - Added bindings for newly introduced APIs in libvirt 0.1.1

Since 0.0.1:

 - Added Sys::Virt->get_node_info mapping to virNodeGetInfo
 - Exposed the constants for domain state in Sys::Virt::Domain
 - Added binding for virDomainReboot
 - Change get_uuid to return raw UUID string
 - Add get_uuid_string to return a printable version
 - More example programs