@@ -32,6 +32,8 @@ t/100-connect.t
 t/200-domains.t
 t/300-networks.t
 t/400-storage-pools.t
+t/500-storage-vols.t
+t/600-interfaces.t
 t/800-events.t
 typemap
 Virt.xs
