@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:         Sys-Virt
 abstract:     Extension for the libvirt library
-version:      0.2.1
+version:      0.2.2
 author:
   - Daniel P. Berrange <dan@berrange.com>
 license: gpl
