@@ -41,8 +41,8 @@ Group: Development/Tools
 Source: %{appname}-%{version}.tar.gz
 BuildRoot: /var/tmp/%{appname}-%{version}-root
 Requires: perl >= %{perlversion}
-Requires: libvirt >= 0.6.4
-BuildRequires: libvirt-devel >= 0.6.4
+Requires: libvirt >= 0.7.0
+BuildRequires: libvirt-devel >= 0.7.0
 BuildRequires: perl(Test::More)
 BuildRequires: perl(Time::HiRes)
 
